# llm_engineering_project

./: .gitignore  README.md  benchmark_config.json  counterfactual_config.json  counterfactual_config.openrouter.json  counterfactual_config.slow.json  counterfactual_config.smoke.json  main.py  pyproject.toml  requirements.txt
code_fred/: CONSTANTS.py  agent.py  answer_extraction.py  fixed_seeds.py  io_jsonl.py  run_base_test.py  runner.py
code_seb/: GMS8K_counterfactual_generator.py  GMS8K_evaluation_runner.py  cf_config.py  cf_prompts.py  counterfactual_generator.py  counterfactual_generator_base.py  counterfactual_runner.py  counterfactual_strategy.py  counterfactual_task.py  evaluation_runner_base.py  grading.py  runner_evaluator.py
docs/: BACKLOG.md  DESIGN.md  ISSUES.md  RQ_EVALUATION_PLAN.md  SOLVER_MATRIX_FINDINGS.md
harness/: CONSTANTS.py  answer_extraction.py  audit_sample.py  cf_config.py  counterfactual_evaluator.py  counterfactual_runner.py  fixed_seeds.py  haiku_grader.py  run_base_test.py  runner.py  webui.py
latex/: main.tex  references.bib
project_code/: README.md  counterfactual_config.json  counterfactual_results.txt
results/: audit_frontend.html  audit_sample.csv  cf_default.log.err  counterfactual_loop_llama3.1-8b-loop.jsonl  counterfactual_loop_qwen2.5-0.5b-self.jsonl  counterfactual_loop_qwen2.5-0.5b-self.jsonl.meta.json  counterfactual_loop_qwen2.5-1.5b-self.jsonl  counterfactual_loop_qwen2.5-1.5b-self.jsonl.meta.json  counterfactual_loop_qwen2.5-7b-loop.jsonl  counterfactual_loop_qwen3.5-4b-loop.jsonl.meta.json  eval_summary.json  (+37 more)
(+98 files in other folders)
