[project]
name = "llm-engineering-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "openai>=2.45.0",
    "pyarrow>=25.0.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]
